--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   "author": "Arcblock <blocklet@arcblock.io> https://github.com/blocklet",
   "license": "MIT",
   "dependencies": {
-    "@aigne/anthropic": "^0.10.6",
-    "@aigne/cli": "^1.30.1",
-    "@aigne/core": "^1.43.0",
-    "@aigne/gemini": "^0.8.10",
-    "@aigne/openai": "^0.10.10",
+    "@aigne/anthropic": "^0.10.8",
+    "@aigne/cli": "^1.30.3",
+    "@aigne/core": "^1.44.0",
+    "@aigne/gemini": "^0.8.12",
+    "@aigne/openai": "^0.10.12",
     "@aigne/publish-docs": "^0.5.2",
     "glob": "^11.0.3",
     "open": "^10.2.0",
+    "terminal-link": "^4.0.0",
     "ufo": "^1.6.1",
     "yaml": "^2.8.0"
   }
