--- a/agents/batch-docs-detail-generator.yaml
+++ b/agents/batch-docs-detail-generator.yaml
@@ -1,8 +1,8 @@
 type: team
-name: batch-docs-detail-generator
+name: batchDocsDetailGenerator
 description: 批量生成文档详情
 skills:
-  - ./check-detail-generated.mjs
+  - ./check-detail.mjs
 input_schema:
   type: object
   properties:
