--- a/agents/content-detail-generator.yaml
+++ b/agents/content-detail-generator.yaml
@@ -1,4 +1,4 @@
-name: content-detail-generator
+name: contentDetailGenerator
 description: 通用内容详情生成器，支持网站、文档、书籍、演示文稿等多种场景
 instructions:
   url: ../prompts/content-detail-generator.md
