--- a/agents/docs-generator.yaml
+++ b/agents/docs-generator.yaml
@@ -10,16 +10,15 @@ skills:
       skipIfExists: true
   - ./load-config.mjs
   - ./load-sources.mjs
-  - ./check-structure-planning.mjs
+  - ./check-structure-plan.mjs
+  - url: ./save-output.mjs
+    default_input:
+      saveKey: structurePlan
+      savePath:
+        $get: outputDir
+      fileName: structure-plan.json
   - type: transform
-    jsonata: |
-      $merge([$, {
-      "saveKey": "structurePlan",
-      "savePath": outputDir,
-      "fileName": "structure-plan.json"
-      }])
-  - ./save-output.mjs
-  - type: transform
+    name: transformData
     jsonata: |
       $merge([
         $,
