fix: add parallel generation of documents

--- a/agents/batch-docs-detail-generator.yaml
+++ b/agents/batch-docs-detail-generator.yaml
@@ -15,4 +15,5 @@ input_schema:
       items: { type: string }
       description: Array of modified files since last generation
 iterate_on: structurePlanResult
+concurrency: 3
 mode: sequential
