fix: add force regenerate

--- a/agents/docs-generator.yaml
+++ b/agents/docs-generator.yaml
@@ -102,6 +102,9 @@ input_schema:
     feedback:
       type: string
       description: Feedback for structure planning adjustments
+    forceRegenerate:
+      type: string
+      description: Force regenerate the documentation
     # labels:
     #   type: array
     #   items:
