--- a/agents/reflective-structure-planner.yaml
+++ b/agents/reflective-structure-planner.yaml
@@ -3,6 +3,7 @@ name: reflectiveStructurePlanner
 description: A team of agents that plan the structure of the documentation.
 skills:
   - structure-planning.yaml
+task_title: Plan the structure of the documentation
 reflection:
   reviewer: check-structure-planning-result.yaml
   is_approved: isValid
