fix: change provider to google

--- a/aigne.yaml
+++ b/aigne.yaml
@@ -1,9 +1,8 @@
 #!/usr/bin/env aigne
 
 chat_model:
-  provider: gemini
+  provider: google
   name: gemini-2.5-pro
-  # name: gemini-2.5-flash-preview-05-20
   temperature: 0.8
 agents:
   - ./agents/structure-planning.yaml
