--- a/agents/team-publish-docs.yaml
+++ b/agents/team-publish-docs.yaml
@@ -10,10 +10,10 @@ skills:
       skipIfExists: true
   - load-config.mjs
   - publish-docs.mjs
-input_schema:
-  type: object
-  properties:
-    config:
-      type: string
-      description: Path to the config file
-      default: ./doc-smith/config.yaml
+# input_schema:
+#   type: object
+#   properties:
+#     config:
+#       type: string
+#       description: Path to the config file
+#       default: ./.aigne/doc-smith/config.yaml
