--- a/agents/retranslate.yaml
+++ b/agents/retranslate.yaml
@@ -1,8 +1,9 @@
 type: team
-name: update
+name: retranslate
 alias:
-  - up
-description: Optimize and regenerate individual document content and translations
+  - rt
+  - translate-again
+description: Re-translate individual document content to selected languages
 skills:
   - url: ./input-generator.mjs
     default_input:
@@ -25,27 +26,40 @@ skills:
           })
         }
       ])
-  - ./find-item-by-path.mjs
-  - ./format-structure-plan.mjs
-  - url: ./detail-generator-and-translate.yaml
+  - url: ./find-item-by-path.mjs
     default_input:
+      isTranslate: true
+  - ./language-selector.mjs
+  - type: transform
+    jsonata: |
+      $merge([
+        $,
+        {
+          'translates': [$map(selectedLanguages, function($lang) { {"language": $lang} })]
+        }
+      ])
+  - ./batch-translate.yaml
+  - url: ./save-single-doc.mjs
+    default_input:
+      isTranslate: true
       isShowMessage: true
 input_schema:
   type: object
   properties:
-    # config:
-    #   type: string
-    #   description: Path to the config file
-    #   default: ./.aigne/doc-smith/config.yaml
     glossary:
       type: string
       description: Glossary of terms for consistent terminology
     doc-path:
       type: string
-      description: Document path to regenerate
+      description: Document path to retranslate
+    # languages:
+    #   type: array
+    #   items:
+    #     type: string
+    #   description: Languages to translate to
     feedback:
       type: string
-      description: Feedback for content improvement
+      description: Feedback for translation improvement
 output_schema:
   type: object
   properties:
