--- a/aigne.yaml
+++ b/aigne.yaml
@@ -28,6 +28,8 @@ agents:
   - ./agents/load-config.mjs
   - ./agents/team-publish-docs.yaml
   - ./agents/find-item-by-path.mjs
+  - ./agents/retranslate.yaml
+  - ./agents/language-selector.mjs
   - ./docs-mcp/get-docs-structure.mjs
   - ./docs-mcp/get-docs-detail.mjs
   - ./docs-mcp/docs-search.yaml
@@ -40,6 +42,7 @@ cli:
     - ./agents/docs-generator.yaml
     - ./agents/detail-regenerator.yaml
     - ./agents/team-publish-docs.yaml
+    - ./agents/retranslate.yaml
 mcp_server:
   agents:
     - ./docs-mcp/get-docs-structure.mjs
