fix: polish code

--- a/agents/docs-generator.yaml
+++ b/agents/docs-generator.yaml
@@ -30,7 +30,8 @@ skills:
                 'translates': [$map(translateLanguages, function($lang) { {"language": $lang} })]
               }
             ])
-          })
+          }),
+          "datasources": ""
         }
       ])
   - ./format-structure-plan.mjs
