--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@aigne/openai": "^0.10.16",
     "@aigne/publish-docs": "^0.5.4",
     "chalk": "^5.5.0",
+    "dompurify": "^3.2.6",
     "glob": "^11.0.3",
+    "jsdom": "^26.1.0",
     "mermaid": "^11.9.0",
     "open": "^10.2.0",
     "remark-gfm": "^4.0.1",
