--- a/agents/schema/structure-plan.yaml
+++ b/agents/schema/structure-plan.yaml
@@ -8,7 +8,7 @@ items:
       type: string
     path:
       type: string
-      description: 路径，以 RUL 的格式返回，不能为空, 必须以 / 开头，不需要包含语言层级，比如 /zh/about 直接返回 /about
+      description: 路径，以 RUL 的格式返回，不能为空, 不能包含空格等特殊字符, 必须以 / 开头，不需要包含语言层级，比如 /zh/about 直接返回 /about
     parentId:
       type:
         - string
