--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.1.4/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
@@ -23,11 +23,21 @@
         "noUnusedVariables": "error",
         "noUnusedImports": "error",
         "noUnusedFunctionParameters": "error",
-        "noUnusedPrivateClassMembers": "error"
+        "noUnusedPrivateClassMembers": "error",
+        "noUndeclaredVariables": "error",
+        "noUnreachable": "error",
+        "noSelfAssign": "error"
       },
       "suspicious": {
         "noConfusingVoidType": "off",
-        "noExplicitAny": "off"
+        "noExplicitAny": "off",
+        "noDoubleEquals": "error",
+        "noGlobalAssign": "error",
+        "noAssignInExpressions": "warn"
+      },
+      "style": {
+        "useNodejsImportProtocol": "error",
+        "useTemplate": "error"
       },
       "complexity": {
         "noForEach": "off",
