--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "author": "Arcblock <blocklet@arcblock.io> https://github.com/blocklet",
   "license": "MIT",
   "dependencies": {
-    "@aigne/anthropic": "^0.10.13",
-    "@aigne/cli": "^1.33.1",
-    "@aigne/core": "^1.48.0",
-    "@aigne/gemini": "^0.8.17",
-    "@aigne/openai": "^0.10.17",
+    "@aigne/aigne-hub": "^0.4.9",
+    "@aigne/anthropic": "^0.11.0",
+    "@aigne/cli": "^1.34.0",
+    "@aigne/core": "^1.49.0",
+    "@aigne/gemini": "^0.9.0",
+    "@aigne/openai": "^0.11.0",
     "@aigne/publish-docs": "^0.5.4",
     "chalk": "^5.5.0",
     "dompurify": "^3.2.6",
@@ -40,5 +41,8 @@
     "unist-util-visit": "^5.0.0",
     "vfile": "^6.0.3",
     "yaml": "^2.8.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.1.4"
   }
 }
