--- a/aigne.yaml
+++ b/aigne.yaml
@@ -2,8 +2,8 @@
 
 chat_model:
   provider: google
-  # name: gemini-2.5-pro
-  name: gemini-2.5-flash
+  name: gemini-2.5-pro
+  # name: gemini-2.5-flash
   temperature: 0.8
 agents:
   - ./agents/structure-planning.yaml
