fix: polish code

--- a/agents/detail-regenerator.yaml
+++ b/agents/detail-regenerator.yaml
@@ -33,13 +33,9 @@ skills:
 input_schema:
   type: object
   properties:
-    # config:
-    #   type: string
-    #   description: Path to the config file
-    #   default: ./.aigne/doc-smith/config.yaml
     glossary:
       type: string
-      description: Glossary of terms for consistent terminology
+      description: Glossary of terms for consistent terminology, use @<file> to read from a file
     doc-path:
       type: string
       description: Document path to regenerate
