fix: optimizing agent call log

--- a/agents/detail-generator-and-translate.yaml
+++ b/agents/detail-generator-and-translate.yaml
@@ -4,6 +4,8 @@ description: 生成文档详情并翻译
 skills:
   - ./transform-detail-datasources.mjs
   - type: team
+    task_render_mode: collapse
+    name: detailGenerate
     skills:
       - ./content-detail-generator.yaml
       - type: transform
@@ -19,6 +21,7 @@ skills:
       return_last_on_max_iterations: true
     task_title: Generate detail for '{{ title }}'
   - type: transform
+    task_render_mode: hide
     jsonata: |
       $merge([
         $,
