--- a/agents/batch-translate.yaml
+++ b/agents/batch-translate.yaml
@@ -3,6 +3,8 @@ name: batchTranslate
 description: 批量翻译文档到多个语言
 skills:
   - type: team
+    task_render_mode: collapse
+    name: translate
     skills:
       - ./translate.yaml
       - type: transform
