fix: add user preferences during document generation

--- a/agents/batch-translate.yaml
+++ b/agents/batch-translate.yaml
@@ -6,6 +6,9 @@ skills:
     task_render_mode: collapse
     name: translate
     skills:
+      - url: ./find-user-preferences-by-path.mjs
+        default_input:
+          scope: translation
       - ./translate.yaml
       - type: transform
         jsonata: |
