chore: update:deps

--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   "author": "Arcblock <blocklet@arcblock.io> https://github.com/blocklet",
   "license": "MIT",
   "dependencies": {
-    "@aigne/aigne-hub": "0.6.6",
-    "@aigne/anthropic": "0.11.6",
-    "@aigne/cli": "1.38.0",
-    "@aigne/core": "1.53.0",
-    "@aigne/gemini": "0.9.6",
-    "@aigne/openai": "0.12.0",
-    "@aigne/publish-docs": "0.5.5",
+    "@aigne/aigne-hub": "^0.6.8",
+    "@aigne/anthropic": "^0.11.8",
+    "@aigne/cli": "^1.39.1",
+    "@aigne/core": "^1.55.0",
+    "@aigne/gemini": "^0.9.8",
+    "@aigne/openai": "^0.12.2",
+    "@aigne/publish-docs": "^0.5.6",
     "chalk": "^5.5.0",
     "dompurify": "^3.2.6",
     "glob": "^11.0.3",
