--- a/agents/feedback-refiner.yaml
+++ b/agents/feedback-refiner.yaml
@@ -10,18 +10,18 @@ input_schema:
   properties:
     feedback:
       type: string
-      description: 用户原始反馈
+      description: User's original feedback
     stage:
       type: string
-      description: 反馈产生的命令/场景（用于推断 scope）, 可选值：structure_planning, document_refine, translation_refine
+      description: The command/scenario that generated the feedback (used to infer scope), possible values. structure_planning, document_refine, translation_refine
     paths:
       type: array
       items:
         type: string
-      description: 可选。用户在本次命令中指定的文档路径
+      description: Optional. Document paths specified by the user in the current command
     existingPreferences:
       type: string
-      description: 可选。当前已保存的用户偏好规则的 YAML 格式字符串，用于避免重复保存相似的规则
+      description: Optional. YAML format string of currently saved user preference rules, used to avoid duplicate saving of similar rules
   required: 
     - feedback
     - stage
@@ -31,16 +31,16 @@ output_schema:
   properties:
     rule:
       type: string
-      description: 将用户的反馈提炼总结，形成一个通用的规则
+      description: Refine and summarize user feedback into a general rule
     scope:
       type: string
-      description: 规则适用范围：global, structure, document, translation
+      description: Rule scope. global, structure, document, translation
     save:
       type: boolean
-      description: 是否需要保存为持久化偏好（true=保存；false=一次性不保存）
+      description: Whether to save as persistent preference (true=save; false=one-time, do not save)
     limitToInputPaths:
       type: boolean
-      description: 是否仅在后续使用时限定到“本次输入的 paths 范围内”
+      description: Whether to limit to the "paths specified in current input" when used subsequently
   required:
     - rule
     - scope
