--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@aigne/publish-docs": "^0.6.0",
     "chalk": "^5.5.0",
     "dompurify": "^3.2.6",
+    "fs-extra": "^11.3.1",
     "glob": "^11.0.3",
     "jsdom": "^26.1.0",
     "mermaid": "^11.9.0",
