fix: update command add reset parameter to support ignoring previous results

--- a/agents/detail-regenerator.yaml
+++ b/agents/detail-regenerator.yaml
@@ -54,6 +54,9 @@ input_schema:
     feedback:
       type: string
       description: Feedback for content improvement
+    reset:
+      type: boolean
+      description: Ignore previous results and regenerate content from scratch
 output_schema:
   type: object
   properties:
