--- a/aigne.yaml
+++ b/aigne.yaml
@@ -40,6 +40,7 @@ agents:
   - ./agents/check-feedback-refiner.mjs
   - ./agents/feedback-refiner.yaml
   - ./agents/manage-prefs.mjs
+  - ./agents/certify/certify.yaml
 cli:
   chat: ./agents/chat.yaml
   agents:
