--- a/agents/chat.yaml
+++ b/agents/chat.yaml
@@ -21,10 +21,10 @@ instructions: |
 input_key: message
 memory: true
 skills:
-  - ./input-generator.mjs
-  - ./docs-generator.yaml
-  - ./detail-regenerator.yaml
-  - ./team-publish-docs.yaml
-  - ./retranslate.yaml
-  - ./docs-fs.yaml
+  - ./init.mjs
+  - ./generate.yaml
+  - ./update.yaml
+  - ./publish.yaml
+  - ./translate.yaml
+  - ./docs-fs-actor.yaml
   - ./exit.mjs
