--- a/aigne.yaml
+++ b/aigne.yaml
@@ -6,49 +6,49 @@ chat_model:
   # name: gemini-2.5-flash
   temperature: 0.8
 agents:
-  - ./agents/structure-plan-generator.yaml
-  - ./agents/batch-docs-detail-generator.yaml
-  - ./agents/load-sources.mjs
-  - ./agents/save-docs.mjs
-  - ./agents/translate-doc.yaml
-  - ./agents/detail-generator-and-translate.yaml
-  - ./agents/check-detail.mjs
-  - ./agents/transform-detail-datasources.mjs
-  - ./agents/batch-translate.yaml
-  - ./agents/save-single-doc.mjs
-  - ./agents/save-output.mjs
-  - ./agents/check-structure-plan.mjs
-  - ./agents/content-detail-generator.yaml
-  - ./agents/structure-planner.yaml
-  - ./agents/check-structure-planning-result.yaml
-  - ./agents/init.mjs
-  - ./agents/generate.yaml
-  - ./agents/update.yaml
-  - ./agents/publish-docs.mjs
-  - ./agents/format-structure-plan.mjs
-  - ./agents/load-config.mjs
-  - ./agents/publish.yaml
-  - ./agents/find-item-by-path.mjs
-  - ./agents/translate.yaml
-  - ./agents/language-selector.mjs
+  - ./agents/generate/structure-plan-generator.yaml
+  - ./agents/update/batch-docs-detail-generator.yaml
+  - ./agents/utils/load-sources.mjs
+  - ./agents/utils/save-docs.mjs
+  - ./agents/translate/translate-doc.yaml
+  - ./agents/update/detail-generator-and-translate.yaml
+  - ./agents/update/check-detail.mjs
+  - ./agents/utils/transform-detail-datasources.mjs
+  - ./agents/translate/batch-translate.yaml
+  - ./agents/utils/save-single-doc.mjs
+  - ./agents/utils/save-output.mjs
+  - ./agents/generate/check-structure-plan.mjs
+  - ./agents/update/content-detail-generator.yaml
+  - ./agents/generate/structure-planner.yaml
+  - ./agents/generate/check-structure-planning-result.yaml
+  - ./agents/init/init.mjs
+  - ./agents/generate/generate.yaml
+  - ./agents/update/update.yaml
+  - ./agents/publish/publish-docs.mjs
+  - ./agents/utils/format-structure-plan.mjs
+  - ./agents/utils/load-config.mjs
+  - ./agents/publish/publish.yaml
+  - ./agents/utils/find-item-by-path.mjs
+  - ./agents/translate/translate.yaml
+  - ./agents/translate/language-selector.mjs
   - ./docs-mcp/get-docs-structure.mjs
   - ./docs-mcp/get-docs-detail.mjs
   - ./docs-mcp/docs-search.yaml
   - ./docs-mcp/analyze-docs-relevance.yaml
   - ./docs-mcp/read-doc-content.mjs
   - ./docs-mcp/analyze-content-relevance.yaml
-  - ./agents/check-feedback-refiner.mjs
-  - ./agents/feedback-refiner.yaml
-  - ./agents/prefs.mjs
+  - ./agents/utils/check-feedback-refiner.mjs
+  - ./agents/utils/feedback-refiner.yaml
+  - ./agents/prefs/prefs.mjs
 cli:
-  chat: ./agents/chat.yaml
+  chat: ./agents/chat/chat.yaml
   agents:
-    - ./agents/init.mjs
-    - ./agents/generate.yaml
-    - ./agents/update.yaml
-    - ./agents/publish.yaml
-    - ./agents/translate.yaml
-    - ./agents/prefs.mjs
+    - ./agents/init/init.mjs
+    - ./agents/generate/generate.yaml
+    - ./agents/update/update.yaml
+    - ./agents/publish/publish.yaml
+    - ./agents/translate/translate.yaml
+    - ./agents/prefs/prefs.mjs
 mcp_server:
   agents:
     - ./docs-mcp/get-docs-structure.mjs
