refactor: merge init and load config agent

--- a/docs-mcp/docs-search.yaml
+++ b/docs-mcp/docs-search.yaml
@@ -2,7 +2,9 @@ type: team
 name: docs-search
 description: Search relevant documents based on user query
 skills:
-  - ../agents/utils/load-config.mjs
+  - url: ../agents/init/init.mjs
+    default_input:
+      skipIfExists: true
   - ../agents/utils/load-sources.mjs
   - analyze-docs-relevance.yaml
   - read-doc-content.mjs
