--- a/agents/team-publish-docs.yaml
+++ b/agents/team-publish-docs.yaml
@@ -3,7 +3,7 @@ name: publish
 alias:
   - pub
   - p
-description: Publish the documentation to Discuss Kit
+description: Publish your documentation online
 skills:
   - url: ./input-generator.mjs
     default_input:
@@ -15,4 +15,4 @@ input_schema:
   properties:
     appUrl:
       type: string
-      description: target website URL where the documentation will be published (optional - if not provided, will prompt for interactive input)
+      description: Website URL where docs will be published (optional - leave empty for interactive setup)
