--- a/agents/feedback-refiner.yaml
+++ b/agents/feedback-refiner.yaml
@@ -1,5 +1,5 @@
 name: feedbackRefiner
-description: Analyzes a user's specific feedback on generated documentation and refines it into a general, reusable preference rule for future use.
+description: Learn from your feedback to improve future documentation
 
 # The instructions file contains the core logic (the prompt) for this Agent.
 instructions:
@@ -10,18 +10,18 @@ input_schema:
   properties:
     feedback:
       type: string
-      description: User's original feedback
+      description: Tell us what you think about the documentation
     stage:
       type: string
-      description: The command/scenario that generated the feedback (used to infer scope), possible values. structure_planning, document_refine, translation_refine
+      description: Which part of the process this feedback is about (structure_planning, document_refine, translation_refine)
     paths:
       type: array
       items:
         type: string
-      description: Optional. Document paths specified by the user in the current command
+      description: Specific documents this feedback applies to (optional)
     existingPreferences:
       type: string
-      description: Optional. YAML format string of currently saved user preference rules, used to avoid duplicate saving of similar rules
+      description: Your existing preferences to avoid duplicates (optional)
   required: 
     - feedback
     - stage
@@ -31,19 +31,19 @@ output_schema:
   properties:
     rule:
       type: string
-      description: Refine and summarize user feedback into a general rule
+      description: General rule created from your feedback
     scope:
       type: string
-      description: Rule scope. global, structure, document, translation
+      description: Where this rule applies (global, structure, document, translation)
     save:
       type: boolean
-      description: Whether to save as persistent preference (true=save; false=one-time, do not save)
+      description: Should we remember this preference for next time?
     limitToInputPaths:
       type: boolean
-      description: Whether to limit to the "paths specified in current input" when used subsequently
+      description: Apply only to the specific documents mentioned?
     reason:
       type: string
-      description: Explanation of why the save decision was made and how the rule and scope were derived
+      description: Why we made this decision and how the rule was created
   required:
     - rule
     - scope
